--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "start": "node bin/currencies",
-        "test": "node test/testCoinbase.js"
+        "test": "node test/testCoinmarketcap.js"
     },
     "dependencies": {
         "chart.js": "^2.9.3",
@@ -17,6 +17,7 @@
         "moment": "^2.24.0",
         "mongoose": "^5.9.7",
         "morgan": "~1.9.1",
+        "node-fetch": "2",
         "node-schedule": "^1.3.2",
         "node-telegram-bot-api": "^0.40.0",
         "pug": "^2.0.4"
